@@ -33,6 +33,9 @@ RELEASE NOTES
     the module file name when the first argument of the use_module/2 directive
     is a compound term (as usual when using library notation).
 
+    Updated the definition of the pseudo-object "user" in order to virtually
+    contain the definition of all Prolog built-in predicates.
+
     Optimized meta-calls when using closures wrapped in the {}/1 control
     construct. Removed redundant check for debugging mode when executing
     meta-calls.
